services/code-for-boston/wekan/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wekan
  namespace: code-for-boston
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wekan
  template:
    metadata:
      labels:
        app: wekan
    spec:
      containers:
        - name: wekan
          image: wekanteam/wekan:v9.80
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
