services/code-for-boston/wekan/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wekan
  namespace: code-for-boston
spec:
  selector:
    app: wekan
  ports:
    - port: 8080
      targetPort: 8080
